<resources>
    <string name="app_name">My Menu Planner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navigation drawer Options    !-->
    <string name="nav_nd_ingredients">Meals ingredients for this week </string>
    <string name="nav_nd_meals">Meals </string>
    <string name="nav_nd_search">Search Food </string>
    <string name="nav_nd_option">Options </string>

    <string name="title_activity_food_detail">Foods</string>

    <string name="text_day1">Monday</string>
    <string name="text_day2">Tuesday</string>
    <string name="text_day3">Wednesday</string>
    <string name="text_day4">Thursday</string>
    <string name="text_day5">Friday</string>
    <string name="text_day6">Saturday</string>
    <string name="text_day7">Sunday</string>

    <string name="text_empty">Empty</string>

    <string name="directions">How to prepare:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="today">Today</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="date">Date</string>
    <string name="title_activity_ingredients">IngredientsActivity</string>

    <string name="empty_list">List of Ingredients, Empty.</string>

    <string name="title_search">Search Meal per Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="btn_search">Search</string>
    <string name="title_meals">List of Meals</string>
    <string name="title_detail_meal">Meal Detail</string>
    <string name="title_ingredients">List of Ingredients</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
