<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bck_menu"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/tv_menu_date"
          android:layout_width="0dp"
          android:layout_weight=".20"
          android:layout_height="wrap_content"
          android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
          android:text="@string/date"
          android:padding="8dp"
          android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_menu_lunch"
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/lunch"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_menu_dinner"
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/dinner"
            android:gravity="center_horizontal"/>

     </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/linear_layout"
            android:background="@android:color/darker_gray"/>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/linear_layout"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
