<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/app_name" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/title_search"
                android:textSize="24sp" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/ingredients"
                android:padding="8dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/btn_search"
                android:layout_below="@+id/multiAutoCompleteTextView"
                android:layout_alignLeft="@+id/multiAutoCompleteTextView"
                android:layout_alignStart="@+id/multiAutoCompleteTextView" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/button"
                android:layout_alignLeft="@+id/button"
                android:layout_alignStart="@+id/button"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_margin="8dp"
                android:padding="8dp" />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>